--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>leyou-registry</module>
         <module>leyou-gateway</module>
         <module>leyou-item</module>
+        <module>leouy-common</module>
     </modules>
     <packaging>pom</packaging>
     <name>leyou</name>
