--- a/leyou-item/leyou-item-interface/pom.xml
+++ b/leyou-item/leyou-item-interface/pom.xml
@@ -12,5 +12,16 @@
     <groupId>club.wlqzz.interface</groupId>
     <artifactId>leyou-item-interface</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
