--- a/leyou-registry/src/main/resources/application.yml
+++ b/leyou-registry/src/main/resources/application.yml
@@ -12,3 +12,8 @@ eureka:
   server:
     enable-self-preservation: false # 关闭自我保护
     eviction-interval-timer-in-ms: 5000 # 每隔5秒进行一次服务列表清理
+zuul:
+  prefix: /api # 添加路由前缀
+  retryable: true
+  routes:
+    item-service: /item/** # 将商品微服务映射到/item/**
