--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>leyou-gateway</module>
         <module>leyou-item</module>
         <module>leouy-common</module>
+        <module>leyou-upload</module>
     </modules>
     <packaging>pom</packaging>
     <name>leyou</name>
@@ -77,6 +78,12 @@
                 <groupId>com.github.tobato</groupId>
                 <artifactId>fastdfs-client</artifactId>
                 <version>${fastDFS.client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.4</version>
+                <scope>compile</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
